--- a/CSB/CSB/Master/LayoutAdmin.Master
+++ b/CSB/CSB/Master/LayoutAdmin.Master
@@ -5275,7 +5275,7 @@ table tr:hover .table-links {
                 <li class="nav-item dropdown">
                     <a href="#" class="nav-link has-dropdown" data-toggle="dropdown"><i class="bi-folder"></i> <span>Hồ sơ tàu</span></a>
                     <ul class="dropdown-menu">
-                        <li><a class="nav-link" href="../Page_Master/Null.aspx">Tính năng chiến, kỹ thuật tàu, trang bị</a></li>
+                        <li><a class="nav-link" href="../Page_Master/Manage_ship?vung=1">Tính năng chiến, kỹ thuật tàu, trang bị</a></li>
                         <li><a class="nav-link" href="../Page_Master/ShipActivity.aspx">Theo dõi thống kê hoạt động tàu</a></li>
                         <li><a class="nav-link" href="../Page_Master/Null.aspx">Quản lý tai nạn hư hỏng</a></li>
                         <li><a class="nav-link" href="../Page_Master/Null.aspx">Quản lý tình trạng kỹ thuật - khả năng hoạt động</a></li>
@@ -5304,12 +5304,13 @@ table tr:hover .table-links {
     <div class="main-content" style="min-height: 543px;">
         <section class="section" style="margin-bottom: 20px;z-index: 2;">
             <div class="mainMenu">
-                <ul class="mainMenu-list">
-                    <li><a id="Vung1"  class="a_menu" href="../Page_Master/Manage_ship?vung=1">VÙNG 1</a></li>
-                    <li><a id="Vung2"  class="a_menu" href="../Page_Master/Manage_ship?vung=2">VÙNG 2</a></li>
-                    <li><a id="Vung3"  class="a_menu" href="../Page_Master/Manage_ship?vung=3">VÙNG 3</a></li>
-                    <li><a id="Vung4"  class="a_menu" href="../Page_Master/Manage_ship?vung=4">VÙNG 4</a></li>
-                    <li><a class="a_menu" href="../Page_Master/Null.aspx">CÁC ĐƠN VỊ TRỰC THUỘC</a></li>
+                <ul class="mainMenu-list" style="display: flex; justify-content: space-between;">
+                    <li><a class="a_menu" href="../Page_Master/Null.aspx">TRANG CHỦ</a></li>
+                    <li><a class="a_menu" href="../Page_Master/Null.aspx">CẬP NHẬT TTDL</a></li>
+                    <li><a class="a_menu" href="../Page_Master/Null.aspx">TRUY XUẤT DL</a></li>
+                    <li><a class="a_menu" href="../Page_Master/Null.aspx">GIỚI THIỆU VỀ PQLKTT</a></li>
+                    <li><a class="a_menu" href="../Page_Master/Null.aspx">BIỂU ĐỒ, THỐNG KÊ, PTDL</a></li>
+                    <li><a class="a_menu" href="../Page_Master/Null.aspx">ĐỀ XUẤT MỚI</a></li>
                 </ul>    
                 <ul class="mainMenu-list">
                     <li id="li_infor_login">
@@ -5327,9 +5328,7 @@ table tr:hover .table-links {
                         </div>
                     </li>
                 </ul>
-                    
-                </div>
-
+            </div>
         </section>
 
            <asp:ContentPlaceHolder ID="MainContentAdmin" runat="server"></asp:ContentPlaceHolder>
