--- a/CSB/CSB/Master/LayoutAdmin.Master
+++ b/CSB/CSB/Master/LayoutAdmin.Master
@@ -252,7 +252,7 @@ p, ul:not(.list-unstyled), ol {
     .custom-select:focus,
     .custom-file-label:focus {
         background-color: rgba(182, 165, 165, 0.1);
-        border-color: rgba(252, 252, 252, 0.1);
+        border: 1px solid #cccccc;
     }
 
     .input-group-text,
@@ -3977,7 +3977,7 @@ body.layout-3 .main-footer {
 .main-content {
     padding-left: 260px;
     padding-right: 10px;
-    padding-top: 128px;
+    padding-top: 80px;
     width: 100%;
     position: relative;
 }
@@ -4250,7 +4250,7 @@ input[type=file] {
 }
 
         .mainMenu ul li {
-            font-size: 15px;
+            font-size: 14px;
             display: inline-block;
             line-height: 55px;
         }
@@ -4261,10 +4261,7 @@ input[type=file] {
         text-align: center;
         color: #01b5f9;
         font-weight: bold;
-        padding: 0 22px;
-        line-height: 20px;
-        padding-top: 10px;
-        padding-bottom: 10px;
+        padding: 0 10px;
     }
 
         .mainMenu .a_menu:hover {
