--- a/CSB/CSB/Master/LayoutAdmin.Master
+++ b/CSB/CSB/Master/LayoutAdmin.Master
@@ -16,7 +16,6 @@
     <link href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.min.css" rel="stylesheet" />
 
     <style>
-
         /*btn bt3*/
         .btn {
             display: inline-block;
@@ -805,13 +804,13 @@
             border: 1px solid #cccccc;
         }
 
-    .form-control:focus,
-    .input-group-text:focus,
-    .custom-select:focus,
-    .custom-file-label:focus {
-        background-color: rgba(182, 165, 165, 0.1);
-        border: 1px solid #cccccc;
-    }
+            .form-control:focus,
+            .input-group-text:focus,
+            .custom-select:focus,
+            .custom-file-label:focus {
+                background-color: rgba(182, 165, 165, 0.1);
+                border: 1px solid #cccccc;
+            }
 
             .input-group-text,
             select.form-control:not([size]):not([multiple]),
@@ -4533,13 +4532,13 @@
                 padding-left: 10px;
             }
 
-.main-content {
-    padding-left: 260px;
-    padding-right: 10px;
-    padding-top: 128px;
-    width: 100%;
-    position: relative;
-}
+        .main-content {
+            padding-left: 260px;
+            padding-right: 10px;
+            padding-top: 82px;
+            width: 100%;
+            position: relative;
+        }
 
         .main-footer {
             padding: 20px 30px 20px 280px;
@@ -4815,17 +4814,17 @@
             line-height: 55px;
         }
 
-    .mainMenu .a_menu {
-        display: block;
-        text-decoration: none;
-        text-align: center;
-        color: #01b5f9;
-        font-weight: bold;
-        padding: 0 22px;
-        line-height: 20px;
-        padding-top: 10px;
-        padding-bottom: 10px;
-    }
+        .mainMenu .a_menu {
+            display: block;
+            text-decoration: none;
+            text-align: center;
+            color: #01b5f9;
+            font-weight: bold;
+            padding: 0 22px;
+            line-height: 20px;
+            padding-top: 10px;
+            padding-bottom: 10px;
+        }
 
             .mainMenu .a_menu:hover {
                 background-color: beige;
@@ -5592,254 +5591,258 @@
         }
     </style>
     <style>
-                
-.modal-open {
-  overflow: hidden;
-}
+        .modal-open {
+            overflow: hidden;
+        }
 
-.modal-open .modal {
-  overflow-x: hidden;
-  overflow-y: auto;
-}
+            .modal-open .modal {
+                overflow-x: hidden;
+                overflow-y: auto;
+            }
 
-.modal {
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 1050;
-  display: none;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-  outline: 0;
-}
+        .modal {
+            position: fixed;
+            top: 0;
+            left: 0;
+            z-index: 1050;
+            display: none;
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+            outline: 0;
+        }
 
-.modal-dialog {
-  position: relative;
-  width: auto;
-  margin: 0.5rem;
-  pointer-events: none;
-}
+        .modal-dialog {
+            position: relative;
+            width: auto;
+            margin: 0.5rem;
+            pointer-events: none;
+        }
 
-.modal.fade .modal-dialog {
-  transition: -webkit-transform 0.3s ease-out;
-  transition: transform 0.3s ease-out;
-  transition: transform 0.3s ease-out, -webkit-transform 0.3s ease-out;
-  -webkit-transform: translate(0, -50px);
-  transform: translate(0, -50px);
-}
+        .modal.fade .modal-dialog {
+            transition: -webkit-transform 0.3s ease-out;
+            transition: transform 0.3s ease-out;
+            transition: transform 0.3s ease-out, -webkit-transform 0.3s ease-out;
+            -webkit-transform: translate(0, -50px);
+            transform: translate(0, -50px);
+        }
 
-@media (prefers-reduced-motion: reduce) {
-  .modal.fade .modal-dialog {
-    transition: none;
-  }
-}
+        @media (prefers-reduced-motion: reduce) {
+            .modal.fade .modal-dialog {
+                transition: none;
+            }
+        }
 
-.modal.show .modal-dialog {
-  -webkit-transform: none;
-  transform: none;
-}
+        .modal.show .modal-dialog {
+            -webkit-transform: none;
+            transform: none;
+        }
 
-.modal.modal-static .modal-dialog {
-  -webkit-transform: scale(1.02);
-  transform: scale(1.02);
-}
+        .modal.modal-static .modal-dialog {
+            -webkit-transform: scale(1.02);
+            transform: scale(1.02);
+        }
 
-.modal-dialog-scrollable {
-  display: -ms-flexbox;
-  display: flex;
-  max-height: calc(100% - 1rem);
-}
+        .modal-dialog-scrollable {
+            display: -ms-flexbox;
+            display: flex;
+            max-height: calc(100% - 1rem);
+        }
 
-.modal-dialog-scrollable .modal-content {
-  max-height: calc(100vh - 1rem);
-  overflow: hidden;
-}
+            .modal-dialog-scrollable .modal-content {
+                max-height: calc(100vh - 1rem);
+                overflow: hidden;
+            }
 
-.modal-dialog-scrollable .modal-header,
-.modal-dialog-scrollable .modal-footer {
-  -ms-flex-negative: 0;
-  flex-shrink: 0;
-}
+            .modal-dialog-scrollable .modal-header,
+            .modal-dialog-scrollable .modal-footer {
+                -ms-flex-negative: 0;
+                flex-shrink: 0;
+            }
 
-.modal-dialog-scrollable .modal-body {
-  overflow-y: auto;
-}
+            .modal-dialog-scrollable .modal-body {
+                overflow-y: auto;
+            }
 
-.modal-dialog-centered {
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-align: center;
-  align-items: center;
-  min-height: calc(100% - 1rem);
-}
+        .modal-dialog-centered {
+            display: -ms-flexbox;
+            display: flex;
+            -ms-flex-align: center;
+            align-items: center;
+            min-height: calc(100% - 1rem);
+        }
 
-.modal-dialog-centered::before {
-  display: block;
-  height: calc(100vh - 1rem);
-  height: -webkit-min-content;
-  height: -moz-min-content;
-  height: min-content;
-  content: "";
-}
+            .modal-dialog-centered::before {
+                display: block;
+                height: calc(100vh - 1rem);
+                height: -webkit-min-content;
+                height: -moz-min-content;
+                height: min-content;
+                content: "";
+            }
 
-.modal-dialog-centered.modal-dialog-scrollable {
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -ms-flex-pack: center;
-  justify-content: center;
-  height: 100%;
-}
+            .modal-dialog-centered.modal-dialog-scrollable {
+                -ms-flex-direction: column;
+                flex-direction: column;
+                -ms-flex-pack: center;
+                justify-content: center;
+                height: 100%;
+            }
 
-.modal-dialog-centered.modal-dialog-scrollable .modal-content {
-  max-height: none;
-}
+                .modal-dialog-centered.modal-dialog-scrollable .modal-content {
+                    max-height: none;
+                }
 
-.modal-dialog-centered.modal-dialog-scrollable::before {
-  content: none;
-}
+                .modal-dialog-centered.modal-dialog-scrollable::before {
+                    content: none;
+                }
 
-.modal-content {
-  position: relative;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  width: 100%;
-  pointer-events: auto;
-  background-color: #fff;
-  background-clip: padding-box;
-  border: 1px solid rgba(0, 0, 0, 0.2);
-  border-radius: 0.3rem;
-  outline: 0;
-}
+        .modal-content {
+            position: relative;
+            display: -ms-flexbox;
+            display: flex;
+            -ms-flex-direction: column;
+            flex-direction: column;
+            width: 100%;
+            pointer-events: auto;
+            background-color: #fff;
+            background-clip: padding-box;
+            border: 1px solid rgba(0, 0, 0, 0.2);
+            border-radius: 0.3rem;
+            outline: 0;
+        }
 
-.modal-backdrop {
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 1040;
-  width: 100vw;
-  height: 100vh;
-  background-color: #000;
-}
+        .modal-backdrop {
+            position: fixed;
+            top: 0;
+            left: 0;
+            z-index: 1040;
+            width: 100vw;
+            height: 100vh;
+            background-color: #000;
+        }
 
-.modal-backdrop.fade {
-  opacity: 0;
-}
+            .modal-backdrop.fade {
+                opacity: 0;
+            }
 
-.modal-backdrop.show {
-  opacity: 0.5;
-}
+            .modal-backdrop.show {
+                opacity: 0.5;
+            }
 
-.modal-header {
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-align: start;
-  align-items: flex-start;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
-  padding: 1rem 1rem;
-  border-bottom: 1px solid #dee2e6;
-  border-top-left-radius: calc(0.3rem - 1px);
-  border-top-right-radius: calc(0.3rem - 1px);
-}
+        .modal-header {
+            display: -ms-flexbox;
+            display: flex;
+            -ms-flex-align: start;
+            align-items: flex-start;
+            -ms-flex-pack: justify;
+            justify-content: space-between;
+            padding: 1rem 1rem;
+            border-bottom: 1px solid #dee2e6;
+            border-top-left-radius: calc(0.3rem - 1px);
+            border-top-right-radius: calc(0.3rem - 1px);
+        }
 
-.modal-header .close {
-  padding: 1rem 1rem;
-  margin: -1rem -1rem -1rem auto;
-}
+            .modal-header .close {
+                padding: 1rem 1rem;
+                margin: -1rem -1rem -1rem auto;
+            }
 
-.modal-title {
-  margin-bottom: 0;
-  line-height: 1.5;
-}
+        .modal-title {
+            margin-bottom: 0;
+            line-height: 1.5;
+        }
 
-.modal-body {
-  position: relative;
-  -ms-flex: 1 1 auto;
-  flex: 1 1 auto;
-  padding: 1rem;
-}
+        .modal-body {
+            position: relative;
+            -ms-flex: 1 1 auto;
+            flex: 1 1 auto;
+            padding: 1rem;
+        }
 
-.modal-footer {
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-  -ms-flex-align: center;
-  align-items: center;
-  -ms-flex-pack: end;
-  justify-content: flex-end;
-  padding: 0.75rem;
-  border-top: 1px solid #dee2e6;
-  border-bottom-right-radius: calc(0.3rem - 1px);
-  border-bottom-left-radius: calc(0.3rem - 1px);
-}
+        .modal-footer {
+            display: -ms-flexbox;
+            display: flex;
+            -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
+            -ms-flex-align: center;
+            align-items: center;
+            -ms-flex-pack: end;
+            justify-content: flex-end;
+            padding: 0.75rem;
+            border-top: 1px solid #dee2e6;
+            border-bottom-right-radius: calc(0.3rem - 1px);
+            border-bottom-left-radius: calc(0.3rem - 1px);
+        }
 
-.modal-footer > * {
-  margin: 0.25rem;
-}
+            .modal-footer > * {
+                margin: 0.25rem;
+            }
 
-.modal-scrollbar-measure {
-  position: absolute;
-  top: -9999px;
-  width: 50px;
-  height: 50px;
-  overflow: scroll;
-}
+        .modal-scrollbar-measure {
+            position: absolute;
+            top: -9999px;
+            width: 50px;
+            height: 50px;
+            overflow: scroll;
+        }
 
-@media (min-width: 576px) {
-  .modal-dialog {
-    max-width: 500px;
-    margin: 1.75rem auto;
-  }
-  .modal-dialog-scrollable {
-    max-height: calc(100% - 3.5rem);
-  }
-  .modal-dialog-scrollable .modal-content {
-    max-height: calc(100vh - 3.5rem);
-  }
-  .modal-dialog-centered {
-    min-height: calc(100% - 3.5rem);
-  }
-  .modal-dialog-centered::before {
-    height: calc(100vh - 3.5rem);
-    height: -webkit-min-content;
-    height: -moz-min-content;
-    height: min-content;
-  }
-  .modal-sm {
-    max-width: 300px;
-  }
-}
+        @media (min-width: 576px) {
+            .modal-dialog {
+                max-width: 500px;
+                margin: 1.75rem auto;
+            }
 
-@media (min-width: 992px) {
-  .modal-lg,
-  .modal-xl {
-    max-width: 800px;
-  }
-}
+            .modal-dialog-scrollable {
+                max-height: calc(100% - 3.5rem);
+            }
 
-@media (min-width: 1200px) {
-  .modal-xl {
-    max-width: 1140px;
-  }
-}
+                .modal-dialog-scrollable .modal-content {
+                    max-height: calc(100vh - 3.5rem);
+                }
 
-.fade {
-  transition: opacity 0.15s linear;
-}
+            .modal-dialog-centered {
+                min-height: calc(100% - 3.5rem);
+            }
 
-@media (prefers-reduced-motion: reduce) {
-  .fade {
-    transition: none;
-  }
-}
+                .modal-dialog-centered::before {
+                    height: calc(100vh - 3.5rem);
+                    height: -webkit-min-content;
+                    height: -moz-min-content;
+                    height: min-content;
+                }
 
-.fade:not(.show) {
-  opacity: 0;
-}
+            .modal-sm {
+                max-width: 300px;
+            }
+        }
+
+        @media (min-width: 992px) {
+            .modal-lg,
+            .modal-xl {
+                max-width: 800px;
+            }
+        }
+
+        @media (min-width: 1200px) {
+            .modal-xl {
+                max-width: 1140px;
+            }
+        }
+
+        .fade {
+            transition: opacity 0.15s linear;
+        }
+
+        @media (prefers-reduced-motion: reduce) {
+            .fade {
+                transition: none;
+            }
+        }
+
+        .fade:not(.show) {
+            opacity: 0;
+        }
 
         * {
             padding: 0;
@@ -6128,16 +6131,14 @@
                 <ul class="mainMenu-list">
                     <li id="li_infor_login">
                         <div class="dropdown">
-
                             <a id="btn_Infor_Login" class="btn dropdown-toggle" data-toggle="dropdown">
-                                <i id="user-login-fullname" class="bi bi-person-circle icon_account"></i>
+                                <i id="user-login-fullname" class="bi bi-person-circle icon_account"></i><span class="caret"></span>
                             </a>
-
-                            <div class="dropdown-menu" id="menu_infor_login">
-                                <a class="dropdown-item" href="../Page_Master/Information_User"><i class="bi bi-info-circle icon_menu_account">Thông tin tài khoản</i></a>
-                                <a class="dropdown-item" href="../Page_Master/Change_Password"><i class="bi bi-unlock-fill icon_menu_account">Đổi mật khẩu</i> </a>
-                                <a class="dropdown-item" href="#" onclick="clickDangXuat()"><i class="bi bi-box-arrow-in-left icon_menu_account " id="btnDangXuat">Đăng xuất</i> </a>
-                            </div>
+                            <ul class="dropdown-menu" id="menu_infor_login">
+                                <li><a class="dropdown-item" href="../Page_Master/Information_User"><i class="bi bi-info-circle icon_menu_account"> Thông tin tài khoản</i></a></li>
+                                <li><a class="dropdown-item" href="../Page_Master/Change_Password"><i class="bi bi-unlock-fill icon_menu_account"> Đổi mật khẩu</i></a></li>
+                                <li><a class="dropdown-item" href="#" onclick="clickDangXuat()"><i class="bi bi-box-arrow-in-left icon_menu_account " id="btnDangXuat"> Đăng xuất</i></a></li>
+                            </ul>
                         </div>
                     </li>
                 </ul>
@@ -6370,6 +6371,7 @@
 
                 if (!mini) {
                     body.removeClass('sidebar-mini');
+                    $('.main-content').css('padding-top', '124px');
                     if (w.outerWidth() > 1024) {
                         $('.navbar-bg').css("width", "calc(100% - 250px)");
                         $('.navbar-bg').css("left", "250px");
@@ -6394,6 +6396,7 @@
                 } else {
                     body.addClass('sidebar-mini');
                     body.removeClass('sidebar-show');
+                    $('.main-content').css('padding-top', '52px');
                     sidebar_nicescroll.remove();
                     sidebar_nicescroll = null;
                     $('.mainMenu').css("margin-top", "47px");
