--- a/CSB/CSB/Master/LayoutAdmin.Master
+++ b/CSB/CSB/Master/LayoutAdmin.Master
@@ -6095,6 +6095,7 @@
                         <li><a class="nav-link" href="../Page_Master/Null.aspx">Quản lý tình trạng kỹ thuật - khả năng hoạt động</a></li>
                         <li><a class="nav-link" href="../Page_Master/Null.aspx">Hồ sơ xuất xưởng sau đóng mới, cải hoán</a></li>
                         <li><a class="nav-link" href="../Page_Master/Manage_flotilla.aspx">Quản lí hải đội</a></li>
+                         <li><a class="nav-link" href="../Page_Master/Manage_squadron.aspx">Quản lí hải đoàn</a></li>
                     </ul>
                 </li>
                 <li class="nav-item dropdown">
@@ -6183,7 +6184,7 @@
     <script>
         var linkapi = "http://localhost:8082/api/";
         //44347
-        var baseaddress = "http://localhost:44347/";
+        var baseaddress = "http://localhost:8080/";
     </script>
     <script src="../Scripts/jquery-3.4.1.min.js"></script>
     <script src="../Scripts/bootstrap-4.6.1/bootstrap.bundle.min.js"></script>
