--- a/CSB/CSB/Master/TrangChu.Master
+++ b/CSB/CSB/Master/TrangChu.Master
@@ -749,6 +749,9 @@
                 border: none !important;
                 background: transparent !important;
             }
+            .row .form-group{
+                display:flex;
+            }
     </style>
 </head>
 
