--- a/CSB/CSB/Master/TrangChu.Master
+++ b/CSB/CSB/Master/TrangChu.Master
@@ -87,6 +87,7 @@
 
                 .card .card-block .sub-title {
                     font-size: 16px;
+                    font-weight: 600;
                 }
 
         .sub-title {
