--- a/CSB/CSB/Master/TrangChu.Master
+++ b/CSB/CSB/Master/TrangChu.Master
@@ -829,6 +829,13 @@
             .row .form-group{
                 display:flex;
             }
+    table.dataTable thead th, table.dataTable tfoot th {
+        font-weight: 500;
+        text-align: center;
+    }
+    .btn {
+        font-size: 12px;
+    }
     </style>
 </head>
 
