--- a/CSB/CSB/Master/TrangChu.Master
+++ b/CSB/CSB/Master/TrangChu.Master
@@ -858,6 +858,7 @@
         table.dataTable thead th, table.dataTable thead td {
             font-weight: 400;
             text-align: center;
+            vertical-align: middle;
         }
 
         .btn {
