--- a/CSB/CSB/Master/TrangChu.Master
+++ b/CSB/CSB/Master/TrangChu.Master
@@ -88,6 +88,7 @@
                 .card .card-block .sub-title {
                     font-size: 16px;
                     font-weight: 600;
+                    font-style: italic;
                 }
 
         .sub-title {
@@ -113,7 +114,7 @@
 
         .col-form-label {
             font-size: 15px;
-            font-weight: 600;
+            font-weight: 400;
             text-align: right;
             line-height: normal;
         }
@@ -1028,8 +1029,8 @@
     <script src="../Scripts/vendor/jquery.nicescroll.min.js"></script>
     <script>
         var linkapi = "http://localhost:8082/api/";
-        var baseaddress = "http://localhost:44347/";
-        //var baseaddress = "http://localhost:8080/";
+        //var baseaddress = "http://localhost:44347/";
+        var baseaddress = "http://localhost:8080/";
         $(document).ready(function () {
             if (sessionStorage.getItem("userLoginUsername") != null) {
                 $('#user-login-fullname').text(" " + sessionStorage.getItem("userLoginFullname"));
