--- a/CSB/CSB/Master/TrangChu.Master
+++ b/CSB/CSB/Master/TrangChu.Master
@@ -813,6 +813,33 @@
         .btn {
             font-size: 12px;
         }
+                .row .form-group {
+            display: flex;
+        }
+
+        table.dataTable thead th, table.dataTable tfoot th {
+            font-weight: 500;
+            text-align: center;
+        }
+
+        .btn {
+            font-size: 14px;
+        }
+
+
+
+
+
+        #loader{
+            z-index: 999;
+            position:fixed;
+            top:50%;
+            left:50%;
+        }
+
+        .hidden{
+            display:none;
+        }
     </style>
 </head>
 
